updated work project section with link as experiment and kept about me section short for now

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
     <!-- Content for my projects-->
     <div class="work-projects">
       <div class="work-project"> 
-        <img src="assets/images/M1C.pdf" alt="Project 1">
+        <a href="https://github.com/dialaobeid">  
+        <img src="assets/images/M1C.pdf" alt="Project 1"> 
         <p>This challenge included refactoring the HMTL and CSS code to improve the application</p>
+        </a>
       </div>  
 
       <div class="work-project"> 
@@ -53,7 +55,7 @@
   <section id="contact" class="contact">
     <!-- Contact Content -->
     <h2>Contact Me</h2>
-        <ul>
+        <ul class="contact-list">
         <li><a href="https://github.com/dialaobeid">Github</a></li>
         <li><a href="dialajo9@gmail.com">Email</a></li>
         <li>(999)-999-9999</li>
