added a third project with my github link as placeholder link for each work project, made a third header to label projects

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <li><a href="#aboutme">About Me</a></li>
       <li><a href="#work">My Work</a></li>
       <li><a href="#contact">Contact Me</a></li>
-      <li><a href="#resume">Resume</a></li>
     </ul>
   </nav>
 </header>
@@ -30,7 +29,13 @@
     <h2>About Me</h2>
     <!-- Short bio about me showcasing educational bg and work skills-->
     <p>
-      My skills include: 1 2 3
+      I am a recent UCI graduate with a bachelor's degree in biological sciences. 
+      With a newfound passion for coding, I made my first step by enrolling in UCI's rigorous coding bootcamp.
+      This intensive program equipped me with the essential tools required to learn web development.
+      Over the course of the program, I have honed my expertise in CSS, HTML, and JavaScript. 
+    </p>
+    <p>I am actively seeking part-time or full-time positions in web development. My goal is to contribute
+      to innovative projects using my analytical skills by merging my scientific background with the dynamic world of technology.
     </p>
   </section>
 
@@ -39,17 +44,21 @@
     <!-- Content for my projects-->
     <div class="work-projects">
       <div class="work-project"> 
-        <a href="https://github.com/dialaobeid">  
-        <img src="assets/images/M1C.pdf" alt="Project 1"> 
-        <p>This challenge included refactoring the HMTL and CSS code to improve the application</p>
-        </a>
+        <div class="project-header">
+          <a href="https://github.com/dialaobeid"><h3>Module 1 Challenge</h3></a>
+        </div>  
       </div>  
 
       <div class="work-project"> 
-        <img src="assets/images/MP1.pdf" alt="Project 2">
-        <p>This project included building a landing page using HTML and CSS code</p>
+        <a href="https://github.com/dialaobeid"><h3>Project 1</h3></a>
       </div>
+
+      <div class="work-project"> 
+      <a href="https://github.com/dialaobeid"><h3>Project 2</h3></a>
     </div>
+    </div>
+
+  </div>
   </section>
 
   <section id="contact" class="contact">
@@ -60,12 +69,6 @@
         <li><a href="dialajo9@gmail.com">Email</a></li>
         <li>(999)-999-9999</li>
         </ul>
-  </section>
-
-  <section id="resume" class="resume">
-    <!-- Resume Content -->
-    <h2>My Resume</h2>
-    <!--link resume here-->
   </section>
 
 </main>
