changed my mod ch link to official link

--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
     <h2>My Work</h2>
     <!-- Content for my projects-->
     <div class="work-projects">
-      <div class="work-project"> 
-        <div class="project-header">
-          <a href="https://github.com/dialaobeid"><h3>Module 1 Challenge</h3></a>
-        </div>  
+      <div class="work-project module-challenge">   <!-- added mod class to edit separately-->
+          <a href="https://dialaobeid.github.io/Diala-Mod1-Challenge/"><h3>Module 1 Challenge</h3></a>
       </div>  
 
       <div class="work-project"> 
@@ -54,11 +52,11 @@
       </div>
 
       <div class="work-project"> 
-      <a href="https://github.com/dialaobeid"><h3>Project 2</h3></a>
-    </div>
+        <a href="https://github.com/dialaobeid"><h3>Project 2</h3></a>
+      </div>
+
     </div>
 
-  </div>
   </section>
 
   <section id="contact" class="contact">
