moved images file to root of repo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <header class="header">
-  <h1>Diala Obeid<img src="assets/images/MyAvatar.jpg" alt="My Avatar"></h1> <!-- to make sure avatar stays fixed with h1-->
+  <h1>Diala Obeid<img src="images/MyAvatar.jpg" alt="My Avatar"></h1> <!-- to make sure avatar stays fixed with h1-->
 
   <!-- The 4 links that should be on header-->
   <nav>
