updated README file to include Project 1, updated html code to link to Project 1 and its styling was updated in the css code

--- a/index.html
+++ b/index.html
@@ -10,70 +10,83 @@
 </head>
 
 <body>
-<header class="header">
-  <h1>Diala Obeid<img src="images/MyAvatar.jpg" alt="My Avatar"></h1> <!-- to make sure avatar stays fixed with h1-->
+  <header class="header">
+    <h1>Diala Obeid<img src="images/MyAvatar.jpg" alt="My Avatar"></h1> <!-- to make sure avatar stays fixed with h1-->
 
-  <!-- The 4 links that should be on header-->
-  <nav>
-    <ul>
-      <li><a href="#aboutme">About Me</a></li>
-      <li><a href="#work">My Work</a></li>
-      <li><a href="#contact">Contact Me</a></li>
-    </ul>
-  </nav>
-</header>
+    <!-- The 4 links that should be on header-->
+    <nav>
+      <ul>
+        <li><a href="#aboutme">About Me</a></li>
+        <li><a href="#work">My Work</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<main>
+  <main>
     <!--added ID element to the About Me section for link to work when clicked on-->
-  <section id="aboutme" class="aboutme">
-    <h2>About Me</h2>
-    <!-- Short bio about me showcasing educational bg and work skills-->
-    <p>
-      I am a recent UCI graduate with a bachelor's degree in biological sciences. 
-      With a newfound passion for coding, I made my first step by enrolling in UCI's rigorous coding bootcamp.
-      This intensive program equipped me with the essential tools required to learn web development.
-      Over the course of the program, I have honed my expertise in CSS, HTML, and JavaScript. 
-    </p>
-    <p>I am actively seeking part-time or full-time positions in web development. My goal is to contribute
-      to innovative projects using my analytical skills by merging my scientific background with the dynamic world of technology.
-    </p>
-  </section>
+    <section id="aboutme" class="aboutme">
+      <h2>About Me</h2>
+      <!-- Short bio about me showcasing educational bg and work skills-->
+      <p>
+        I am a recent UCI graduate with a bachelor's degree in biological sciences.
+        With a newfound passion for coding, I made my first step by enrolling in UCI's rigorous coding bootcamp.
+        This intensive program equipped me with the essential tools required to learn web development.
+        Over the course of the program, I have honed my expertise in CSS, HTML, and JavaScript.
+      </p>
+      <p>I am actively seeking part-time or full-time positions in web development. My goal is to contribute
+        to innovative projects using my analytical skills by merging my scientific background with the dynamic world of
+        technology.
+      </p>
+    </section>
 
-  <section id="work" class="work">
-    <h2>My Work</h2>
-    <!-- Content for my projects-->
-    <div class="work-projects">
-      <div class="work-project module-challenge">   <!-- added mod class to edit separately-->
-          <a href="https://dialaobeid.github.io/Diala-Mod1-Challenge/"><h3>Module 1 Challenge</h3></a>
-      </div>  
+    <section id="work" class="work">
+      <h2>My Work</h2>
+      <!-- Content for my projects-->
+      <div class="work-projects">
+        <div class="work-project module-challenge"> <!-- added mod class to edit separately-->
+          <a href="https://dialaobeid.github.io/Diala-Mod1-Challenge/">
+            <h3>Module 1 Challenge</h3>
+          </a>
+        </div>
 
-      <div class="work-project"> 
-        <a href="https://github.com/dialaobeid"><h3>Project 1</h3></a>
+        <div class="work-project project-challenge"> <!-- added mod class to edit separately-->
+          <a href="https://nimo20.github.io/Geek-Humor/">
+            <h3>Project 1</h3>
+          </a>
+        </div>
+
+        <div class="work-project">
+          <a href="https://github.com/dialaobeid">
+            <h3>Project 1</h3>
+          </a>
+        </div>
+
+        <div class="work-project">
+          <a href="https://github.com/dialaobeid">
+            <h3>Project 2</h3>
+          </a>
+        </div>
+
       </div>
 
-      <div class="work-project"> 
-        <a href="https://github.com/dialaobeid"><h3>Project 2</h3></a>
-      </div>
+    </section>
 
-    </div>
-
-  </section>
-
-  <section id="contact" class="contact">
-    <!-- Contact Content -->
-    <h2>Contact Me</h2>
-        <ul class="contact-list">
+    <section id="contact" class="contact">
+      <!-- Contact Content -->
+      <h2>Contact Me</h2>
+      <ul class="contact-list">
         <li><a href="https://github.com/dialaobeid">Github</a></li>
         <li><a href="dialajo9@gmail.com">Email</a></li>
         <li>(999)-999-9999</li>
-        </ul>
-  </section>
+      </ul>
+    </section>
 
-</main>
+  </main>
 
-<footer>
-  <p>&copy; 2024 Diala Obeid</p>
-</footer>
+  <footer>
+    <p>&copy; 2024 Diala Obeid</p>
+  </footer>
 
 </body>
 
